--- a/src/scss/critical.scss
+++ b/src/scss/critical.scss
@@ -107,6 +107,7 @@ footer {
 @import "./components/post";
 @import "./components/pagination";
 @import "./components/author";
+@import "./components/breadcrumb";
 @include backHeros(".anim-bg");
 
 
