--- a/src/_includes/partials/meta.html
+++ b/src/_includes/partials/meta.html
@@ -22,6 +22,7 @@
 <title>{{ pageTitle }}</title>
 <link rel="canonical" href="{{ currentUrl }}"/>
 
+<meta name="author" content="{{author or metadata.author.name}}">
 <meta property="og:site_name" content="{{ siteTitle }}"/>
 <meta property="og:title" content="{{ pageTitle }}"/>
 <meta property="og:type" content="website"/>
@@ -32,7 +33,7 @@
     <meta property="og:image" content="{{ socialImage }}"/>
     <meta name="twitter:image" content="{{ socialImage }}"/>
     <meta property="og:image:alt" content="Page image for {{ metadata.title }}"/>
-    <meta name="twitter:image:alt" content="Page image for {{ metadata.titles }}"/>
+    <meta name="twitter:image:alt" content="Page image for {{ metadata.title }}"/>
 {% endif %}
 
 {% if tagline %}
