--- a/src/scss/components/_breadcrumb.scss
+++ b/src/scss/components/_breadcrumb.scss
@@ -2,6 +2,7 @@
     font-size: var(--font-size-small);
     display: flex;
     align-items: center;
+    margin-top: 1rem;
     a {
         color: var(--PrimaryText);
     }
