make content more dev.to like

--- a/src/_includes/layouts/post.njk
+++ b/src/_includes/layouts/post.njk
@@ -26,7 +26,7 @@
         </div>
         {% include "partials/post-tags.html" %}
         <article id="article-content">
-            <blockquote>{{tagline}}</blockquote>
+            <blockquote>{{description}}</blockquote>
             {% include 'partials/series-nav.html' %}
             <section class="post-content">
                 {{ content | safe }}
