--- a/src/_includes/partials/post-card.html
+++ b/src/_includes/partials/post-card.html
@@ -19,7 +19,7 @@
     <a title="{{post.data.title}}" href="{{ post.url }}" class="post-title-link">
         <div>
             <span class="post-heading">{{ post.data.title }}</span>
-            <p class="tagline">{{post.data.tagline}}</p>
+            <p class="tagline">{{post.data.description}}</p>
         </div>
     </a>
     {%- if seriesInfo %}
