add something wrong link

--- a/src/_includes/layouts/index.njk
+++ b/src/_includes/layouts/index.njk
@@ -16,3 +16,7 @@
    </div>
    {% include  "partials/posts.html"%}
 {% endblock %}
+
+{% block footer %}
+    {% include 'partials/something-wrong.html' %}
+{% endblock %}
