--- a/src/scss/themes/_light.scss
+++ b/src/scss/themes/_light.scss
@@ -19,9 +19,9 @@
     --code-text: var(--Text);
     --code-background: transparent;
     --code-punc: var(--Primary);
-    --code-token: var(--Primary);;
+    --code-token: var(--PrimaryText);
     --code-boolean: var(--Primary);
-    --code-keyword: var(--Primary);
+    --code-keyword: var(--PrimaryText);
     --code-operator: var(--Primary);
     --code-number: #c616a5;
     --code-attr-name: #1f780b;
