--- a/src/_includes/partials/sponsor.html
+++ b/src/_includes/partials/sponsor.html
@@ -1,8 +1,8 @@
 <div class="sponsor">
     <span class="sponsor-title">Did my content help you?</span>
-    <div>Share on social media,&nbsp;<a href="https://twitter.com/intent/follow?screen_name=griffadev">follow me on twitter,</a> or
+    <div>Share on social media,&nbsp;<a rel="noopener" href="{{metadata.author.twitter_url}}">follow me on twitter,</a> or
     </div>
     <div>
-        <a href='https://ko-fi.com/G2G221OBA' target='_blank'><img class="kofi" height='36' style='border:0px;height:36px;' src='/images/kofi.png' border='0' alt='Buy Me a Coffee at ko-fi.com' /></a>
+        <a rel="noopener" href='https://ko-fi.com/G2G221OBA' target='_blank'><img class="kofi" height='36' style='border:0px;height:36px;' src='/images/kofi.png' border='0' alt='Buy Me a Coffee at ko-fi.com' /></a>
     </div>
 </div>
