--- a/src/scss/syntax/_code.scss
+++ b/src/scss/syntax/_code.scss
@@ -51,7 +51,7 @@
  .token.prolog,
  .token.doctype,
  .token.cdata {
-     color: #636f88;
+     color: var(--code-attr-name);
  }
  
  .token.punctuation {
