--- a/src/_includes/layouts/index.njk
+++ b/src/_includes/layouts/index.njk
@@ -7,7 +7,7 @@
    <div slot="observable" class="collapse">
       {% include  "partials/hero.html"%}
    </div>
-   <span id="tagline" class="site-tag"><span class="first-there">Hi,</span><span class="second-there">check out my recent posts, I mainly focus the web.</span></span>
+   <span id="tagline" class="site-tag"><span class="first-there">Hi,</span><span class="second-there">check out my recent posts, I mainly focus on the web.</span></span>
    <div class="hero-scroll-down seventhin">
       <a aria-label="Skip to recent articles" href="#tagline">
          <span>Recent activity</span>
