--- a/src/_includes/partials/comments-section.html
+++ b/src/_includes/partials/comments-section.html
@@ -1,23 +1,6 @@
 {% set currentUrl = metadata.url + page.url %}
-
-<div class="comments" id="disqus_thread"></div>
-<script>
-    const PAGE_URL = '{{ currentUrl }}';
-    /**
-    *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
-    *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
-    
-    var disqus_config = function () {
-    this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
-  //  this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
-    };
-    
-    (function () { // DON'T EDIT BELOW THIS LINE
-        var d = document, s = d.createElement('script');
-        s.src = 'https://griffadev.disqus.com/embed.js';
-        s.setAttribute('data-timestamp', +new Date());
-        (d.head || d.body).appendChild(s);
-    })();
-</script>
-<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by
-        Disqus.</a></noscript>
+{% set genericShareData = external.genericShare.data(title, tags, page) %}
+<div class="comments">
+<span>Sorry, no comments section, feel free to tweet me your thoughts.</span>
+<a rel="noopener" class="icon-share url-share" title="{{external.twitterShare.text}}" target="_blank" href="{{external.twitterShare.url(title, tags, page) | url}}" class="action external">{% include external.twitterShare.icon %}</a>
+</div>
