--- a/src/_includes/partials/sponsor.html
+++ b/src/_includes/partials/sponsor.html
@@ -3,6 +3,6 @@
     <div>Share on social media,&nbsp;<a rel="noopener" href="{{metadata.author.twitter_url}}">follow me on twitter,</a> or
     </div>
     <div>
-        <a rel="noopener" href='https://ko-fi.com/G2G221OBA' target='_blank'><img class="kofi" height='36' style='border:0px;height:36px;' src='/images/kofi.png' border='0' alt='Buy Me a Coffee at ko-fi.com' /></a>
+        <a  class="kofi" rel="noopener" href='https://ko-fi.com/G2G221OBA' target='_blank'><img height='36' style='border:0px;height:36px;' src='/images/kofi.png' border='0' alt='Buy Me a Coffee at ko-fi.com' /></a>
     </div>
 </div>
