--- a/src/scss/components/post.scss
+++ b/src/scss/components/post.scss
@@ -20,7 +20,6 @@ live-demo {
   flex-direction: column;
   flex: 1;
   border-radius: 0.2rem;
-  overflow: auto;
   background: var(--Secondary);
   margin-bottom: 1rem;
   div[contenteditable] {
@@ -283,4 +282,16 @@ blockquote {
 
 .comments {
   margin-top:2rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  > span {
+    margin-right: 0.5rem;
+  }
+
+  svg {
+    fill: var(--Primary);
+    width: 1rem;
+    height: 1rem;
+  }
 }
