--- a/src/feed/feed.njk
+++ b/src/feed/feed.njk
@@ -20,6 +20,7 @@ eleventyExcludeFromCollections: true
 		{% set absolutePostUrl %}{{ post.url | url | absoluteUrl(metadata.url) }}{% endset %}
 		<entry>
 			<title>{{ post.data.title }}</title>
+			<summary>{{ post.data.description }}</summary>
 			<link href="{{ absolutePostUrl }}"/>
 			<updated>{{ post.date | rssDate }}</updated>
 			<id>{{ absolutePostUrl }}</id>
