Add in atom feed

--- a/src/feed/json.njk
+++ b/src/feed/json.njk
@@ -20,7 +20,7 @@ eleventyExcludeFromCollections: true
       "id": "{{ absolutePostUrl }}",
       "url": "{{ absolutePostUrl }}",
       "title": "{{ post.data.title }}",
-      "description": "{{ post.data.description }}"
+      "description": "{{ post.data.description }}",
       "content_html": {% if post.templateContent %}{{ post.templateContent | dump | safe }}{% else %}""{% endif %},
       "date_published": "{{ post.date | rssDate }}"
     }
