--- a/src/feed/json.njk
+++ b/src/feed/json.njk
@@ -20,7 +20,12 @@ eleventyExcludeFromCollections: true
       "id": "{{ absolutePostUrl }}",
       "url": "{{ absolutePostUrl }}",
       "title": "{{ post.data.title }}",
-      "description": "{{ post.data.description }}",
+      "tags": [
+        {%- for tag in helpers.removeCollectionTags(post.data.tags) -%}
+          "{{tag}}"
+          {%- if not loop.last %}, {%- endif %}
+        {%- endfor %}],
+      "summary": "{{ post.data.description }}",
       "content_html": {% if post.templateContent %}{{ post.templateContent | dump | safe }}{% else %}""{% endif %},
       "date_published": "{{ post.date | rssDate }}"
     }
