post layout for natural laang searching

--- a/src/scss/critical.scss
+++ b/src/scss/critical.scss
@@ -86,6 +86,10 @@ footer {
     }
 }
 
+griff-loader {
+    --loader-color: var(--Primary);
+}
+
 /* Utilities */
 @import "./utilities/layout";
 @import "./utilities/visually-hidden";
