--- a/src/scss/utilities/_layout.scss
+++ b/src/scss/utilities/_layout.scss
@@ -108,6 +108,12 @@ $tagline-height:3rem;
   }
 }
 
+@media screen and (max-width: 45em) {
+  .hero-scroll-down {
+    margin-top: -$action-bar;
+  }
+}
+
 .site-tag {
   height: $tagline-height;
   width: 100%;
