--- a/src/_includes/layouts/archive.njk
+++ b/src/_includes/layouts/archive.njk
@@ -2,7 +2,7 @@
 
 {% extends "layouts/base.njk" %}
 
-{% set postslist = pagination.items | reverse %}
+{% set postslist = pagination.items %}
 {% block content %}
    {% include  "partials/posts.html"%}
 {% endblock %}
