--- a/src/_includes/layouts/experiment.njk
+++ b/src/_includes/layouts/experiment.njk
@@ -1,4 +1,5 @@
 {% extends "layouts/base.njk" %}
+{% set enableAds = true  %}
 {% set pageCriticalStyles = ['css/experiments.css']  %}
 {% block content %}
 
