--- a/src/_includes/layouts/post.njk
+++ b/src/_includes/layouts/post.njk
@@ -5,6 +5,7 @@
 {% set pageCriticalStyles = ['css/blog.css'] %}
 
 {% block content %}
+{% set enableAds = true  %}
 {% set seriesInfo = {series:series, seriesEntries: seriesEntries} | getSeriesInfo %}
 <div slot="observable">
     {% include "partials/post-hero.html" %}
