--- a/src/_includes/layouts/index.njk
+++ b/src/_includes/layouts/index.njk
@@ -1,5 +1,6 @@
 {% set pageCriticalStyles = ['css/index.css'] %}
 {% set postslist = collections.posts | reverse | head(-15) %}
+{% set enableAds = true %}
 
 {% extends "layouts/base.njk" %}
 
