--- a/src/scss/themes/_dark.scss
+++ b/src/scss/themes/_dark.scss
@@ -15,6 +15,7 @@
 
     --HeroShoe: #{$shoe};
     --HeroWhite: #{$dark-text};
+    --Accent: #{$dark-bg-50};
 
     --code-text: var(--Text);
     --code-background:transparent;
