about me initial draft

--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -18,7 +18,7 @@
         <link rel="preload" as="font" type="font/woff2" href="/fonts/Nunito-600-latin10.woff2" crossorigin="anonymous" />
         <link rel="preload" as="font" type="font/woff2" href="/fonts/Nunito-800-latin15.woff2" crossorigin="anonymous"/>
         {%- if enableAds %}
-            <script data-ad-client="ca-pub-6191883311533680" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+            {# <script data-ad-client="ca-pub-6191883311533680" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> #}
         {% endif %}
         <style>
             {% include "fonts/fonts.css" %}
