--- a/src/_includes/partials/project-card.html
+++ b/src/_includes/partials/project-card.html
@@ -24,19 +24,29 @@
     </a>
     <div class="post-bottom">
         <div class="post-type-icons">
-            {%- ifAsync github and github.url -%}
-            <a title="View project on Github"  href="{{github.url}}" target="_blank">
+            {%- if github and github.url -%}
+            <a class="icon-with-text" title="View project on Github" href="{{github.url}}" target="_blank">
                 {%- include "img/github.svg" -%}
+                <span>github</span>
             </a>
             {%- endif -%}
-            {%- ifAsync github and github.stars -%}
-            <span  aria-label="stars on Github">
+            {%- if github and github.stars -%}
+            <a target="_blank" href="{{github.url}}/stargazers"  class="icon-with-text" aria-label="{{github.stars}} stars on Github">
                 {%- include "img/star.svg" -%}
-            </span>
+                <span>{{github.stars}} stars</span>
+            </a>
             {%- endif -%}
-             {%- if project.data.url -%}
-                <a title="View project" class="external-link" href="{{project.data.url}}" target="_blank">
+            {%- ifAsync project.data.npm -%}
+            {% set downloads = project.data.npm | fetchNPMWeeklyDownloads -%}
+            <a target="_blank" href="https://www.npmjs.com/package/{{project.data.npm}}" class="icon-with-text" title="{{downloads}} weekly downloads on NPM" aria-label="{{downloads}} weekly downloads on NPM">
+                {%- include "img/download.svg" -%}
+                <span>{{downloads}} weekly</span>
+            </a>
+            {%- endif -%}
+            {%- if project.data.url -%}
+                <a title="View project" class="external-link icon-with-text" href="{{project.data.url}}" target="_blank">
                     {%- include "img/external.svg" -%}
+                    <span>Open</span>
                 </a>
             {%- endif -%}
         </div>
