--- a/src/scss/components/_post-card.scss
+++ b/src/scss/components/_post-card.scss
@@ -36,7 +36,7 @@ $card-padding: 2rem;
         font-size: 1.25rem;
        }
        .tagline {
-         margin-top:1rem;
+         margin:0.5rem 0;
          font-size: 0.95rem;
        }
     }
@@ -86,8 +86,7 @@ $card-padding: 2rem;
 
 .post-bottom {
   position: relative;
-  margin-top: 1rem;
-  padding-top: 1rem;
+  padding-top: 2rem;
   &::before {
     content: "";
     position: absolute;
@@ -101,26 +100,36 @@ $card-padding: 2rem;
   svg {
     width: auto;
     height:100%;
+    max-height: 2rem;
     fill: currentColor;
   }
   .external-link {
-    color: var(--Accent);
+    color: var(--Primary50);
     margin-left: auto;
   }
   .post-type-icons {
     display: flex;
     gap: 1rem;
-    height: 2rem;
+    height: 3rem;
     color: var(--Text);
     align-items: center;
     & > * {
       height: 100%;
+      display: flex;
+      align-items: center;
     }
     a {
       &:hover, &:focus {
         color: var(--Primary);
       }
     }
+  }
+  .icon-with-text {
+    display: flex;
+    flex-direction: column;
+    font-size: 0.75rem;
+    text-transform: uppercase;
+    gap:0.2rem;
   }
 }
 
@@ -160,7 +169,7 @@ $card-padding: 2rem;
   }
   a {
     margin-top: 1rem;
-    color: var(--Primary);
+    color: var(--Primary50);
     &:hover, &:focus {
       color: var(--Text);
     }
