--- a/src/scss/themes/_light.scss
+++ b/src/scss/themes/_light.scss
@@ -5,7 +5,7 @@
     --Primary: #{$light-primary};
     --PrimaryText: #{$light-primary-text};
     --ActionColor: #fff;
-    --Accent: #fff;
+    --Accent: #e1e1e1;
 
     --Primary50: #{$light-primary-50};
     --Text: #{$light-text};
