spacing to message

--- a/src/scss/utilities/_layout.scss
+++ b/src/scss/utilities/_layout.scss
@@ -133,6 +133,7 @@ $tagline-height:3rem;
     font-weight: bold;
   }
   .second-there {
+    margin-top:0.75rem;
     transition-delay: 0s;
   }
 }
