adjust about me text

--- a/src/_includes/layouts/index.njk
+++ b/src/_includes/layouts/index.njk
@@ -19,7 +19,7 @@
    "title": "Some of my ramblings",
    "link": {
       "href": "/me/",
-      "text": "You can learn more about me over here."
+      "text": "Check out my projects over here."
    }
    }
    -%}
