--- a/src/_includes/partials/first-card.html
+++ b/src/_includes/partials/first-card.html
@@ -1,7 +1,7 @@
 {%- if firstCard  %}
 <li class="first-card">
     <h3>{{firstCard.title}}</h3>
-    <p>I'm a Software Developer and Computer Science graduate currently working for IBM.</p>
+    <p>I'm a Senior Frontend Developer and Computer Science graduate currently working for Immersive labs 🙂</p>
     <p>In addition to my professional work and blog posts, in my spare time i've worked on some projects and experiments, using various technologies.</p>
     <a href="{{firstCard.link.href}}">{{firstCard.link.text}}</a>
     <div class="first-card-links">
